exports[`Avatar renders with custom size 1`] = `
<img
  className="ax-avatar"
  src="/image/path"
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  } />
`;

exports[`Avatar renders with defaultProps 1`] = `
<img
  className="ax-avatar"
  src="/image/path"
  style={
    Object {
      "height": 35,
      "width": 35,
    }
  } />
`;
